# h-p-cpp-hope-programming

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  app.info  build.sh  cov.sh  file  launcher.sh  profiling.txt  qa_local.sh  run_valgrind.sh  tests_errors.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
data/: users.json
doc/: client_1.md  emergency.md  server_1.md
html/: alert__module_8h_source.html  annotated.html  cannyEdgeFilter_8hpp_source.html  cjson__handler_8h_source.html  classEdgeDetection-members.html  classEdgeDetection.html  classImageFileOperations-members.html  classImageFileOperations.html  classRocksDbWrapper-members.html  classRocksDbWrapper.html  classSatelliteImageWrapper-members.html  classSatelliteImageWrapper.html  classUserCredentials-members.html  classUserCredentials.html  classes.html  client_8hpp_source.html  dir_45b258e6cbc84d1121cd37263dddb024.html  dir_521ade58e228e49177c65952849d3447.html  dir_59786931376586d262bd9347eb99700f.html  dir_72eb9de70727190ae7ad7f16d7f2e26c.html  dir_82c4fa48b226824d91bc202441e8757f.html  dir_9b380de5a49e1049c0e223d480e252e9.html  dir_e97ea3831c39d27d9a0e357be592cbcd.html  dir_f10e12629f91a3f48cc0ba3e7596f0ba.html  emergency__module_8h_source.html  file__comunication__handler_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  imageFileOperations_8hpp_source.html  lib__handler_8h_source.html  msg__handler_8h_source.html  rocksDbWrapper_8hpp_source.html  satelliteImageWrapper_8hpp_source.html  server_8hpp_source.html  structOption-members.html  structOption.html  structmess__t-members.html  structmess__t.html  (+3 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: client.hpp  server.h  server.hpp
latex/: annotated.tex  classEdgeDetection.tex  classImageFileOperations.tex  classRocksDbWrapper.tex  classSatelliteImageWrapper.tex  classUserCredentials.tex  refman.tex  structOption.tex  structmess__t.tex  structstr__temp.tex
lib/cannyEdgeFilter/: CMakeLists.txt
lib/cannyEdgeFilter/include/: cannyEdgeFilter.hpp  imageFileOperations.hpp  satelliteImageWrapper.hpp
lib/cannyEdgeFilter/src/: cannyEdgeFilter.cpp  imageFileOperations.cpp  main.cpp  satelliteImageWrapper.cpp
lib/cppSocket/: README.md
lib/cppSocket/src/: cppSocketLib.cpp
lib/cppSocket/tests/unit/: main.cpp  unitTcp_test.cpp  unitUdp_test.cpp
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: emergency_module.h
lib/libdyn/src/: emergency_module.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: alert_module.h  cjson_handler.h  file_comunication_handler.hpp  lib_handler.h  msg_handler.h  supplies_data_handler.hpp
lib/libsta/src/: alert_module.c  file_comunication_handler.cpp  lib_handler.c  msg_handler.c  supplies_data_handler.cpp
lib/rocksDbWrapper/include/: rocksDbWrapper.hpp
lib/rocksDbWrapper/src/: rocksDbWrapper.cpp
script/: build.sh  launcher.sh  run_Doxi.sh  run_lcov.sh  run_valgrind.sh  script.sh
src/: server.cpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.c  server.cpp
tests/: CMakeLists.txt
tests/unit/: unit_tests.cpp
